# comet

./: .gitignore  .gitmodules  Cargo.toml  Makefile  Makefile.toml  README.md  build_android.sh  build_android_release.sh  config.json  config.toml  config.yml
android/: Cargo.toml
android_lib/: Cargo.toml
android_lib/src/: lib.rs  nat.rs  nat_manager.rs  proxy.rs
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/manager/: inbound.rs  mod.rs
comet/: Cargo.toml  build.rs
comet-android/: Cargo.toml  config-android.yml
comet-android/src/: lib.rs
comet-bin/: Cargo.toml
comet-bin/src/: main.rs
comet/protos/: config.proto  network.proto  port.proto
comet/src/: context.rs  lib.rs  prelude.rs
comet/src/android/: mod.rs  nat.rs  nat_manager.rs
comet/src/app/: api.rs  dispatcher.rs  inbound_manager.rs  metrics.rs  mod.rs  outbound_manager.rs  plumber.rs
comet/src/common/: connection.rs  context.rs  mod.rs  packet.rs  rwpair.rs
comet/src/config/: mod.rs  outbound.rs
comet/src/crypto/: aead.rs  block.rs  hashing.rs  mod.rs  rand.rs  random.rs  stream.rs
comet/src/dns/: mod.rs  resolver.rs  socket.rs
comet/src/handler/: mod.rs
comet/src/handler/outbound/: both.rs  dashboard.rs  gun.rs  mod.rs  tcp.rs  udp.rs
comet/src/handler/outbound/dashboard/: index.html
comet/src/net_wrapper/: mod.rs  protect.rs
comet/src/processor/: android.rs  any_proxy.rs  linux.rs  mod.rs  set_dest.rs  socks5.rs  socks5_proxy.rs  switch.rs  timeout.rs  tls.rs  tls_mitm.rs  trojan.rs  unix.rs  ws.rs
comet/src/processor/http/: client.rs  server.rs
comet/src/processor/shadowsocks/: aead_cipher.rs  auth.rs  handshake.rs  mod.rs  obfs.rs  stream_cipher.rs
comet/src/processor/sniffer/: http.rs  mod.rs  tls.rs
comet/src/processor/trojan/: client.rs  mod.rs
comet/src/processor/vmess/: alter_id.rs  crypto.rs  mod.rs  session.rs
comet/src/protos/: mod.rs
comet/src/protos/gun/: gun.proto
comet/src/protos/v2ray/: config.proto  config.rs  mod.rs  network.rs  port.rs
comet/src/router/: file.rs  matching.rs  mod.rs
comet/src/router/matching/: domain.rs  mod.rs
comet/src/rule_provider/: mod.rs  rule_set.rs
comet/src/server_provider/: mod.rs
comet/src/utils/: connector.rs  io.rs  metered_stream.rs  mod.rs  prepend_io.rs  prepend_stream.rs
common/: Cargo.toml
common/src/: connection.rs  lib.rs  protocol.rs  rwpair.rs
common/src/io/: mod.rs  stream.rs
dns/: Cargo.toml
dns/src/: lib.rs
kokodayo/: Cargo.toml
kokodayo-android/: Cargo.toml  config-android.yml
kokodayo-android/src/: lib.rs
kokodayo-bin/: Cargo.toml
kokodayo-bin/src/: main.rs
kokodayo/src/: context.rs  lib.rs  main.rs
kokodayo/src/android/: mod.rs  nat.rs  nat_manager.rs
kokodayo/src/app/: inbound_manager.rs  metrics.rs  mod.rs  outbound_manager.rs  plumber.rs  router.rs  transport.rs
kokodayo/src/common/: connection.rs  mod.rs  rwpair.rs
kokodayo/src/common/io/: packet.rs
kokodayo/src/config/: mod.rs
kokodayo/src/crypto/: block.rs  hashing.rs  mod.rs  rand.rs  stream.rs
kokodayo/src/dns/: mod.rs
kokodayo/src/processor/: android.rs  http_proxy.rs  mod.rs  socks5_proxy.rs  switch.rs  unix.rs
kokodayo/src/processor/http/: client.rs  server.rs
kokodayo/src/processor/shadowsocks/: auth.rs  handshake.rs  mod.rs  obfs.rs
kokodayo/src/processor/sniffer/: http.rs  mod.rs  tls.rs
kokodayo/src/router/: matching.rs  mod.rs
kokodayo/src/utils/: io.rs  metered_stream.rs  mod.rs  prepend_stream.rs
net_wrapper/: Cargo.toml
net_wrapper/src/: lib.rs  protect.rs
processors/: Cargo.toml
processors/src/: http_proxy.rs  lib.rs  socks5_proxy.rs
processors/src/sniffer/: http.rs  mod.rs
protocol_processor/: Cargo.toml
protocol_processor/src/: lib.rs  manager.rs
raw_transport/: Cargo.toml
raw_transport/src/: lib.rs  manager.rs  tcp.rs
router/: Cargo.toml
settings/: Cargo.toml
settings/src/: inbound.rs  input.rs  lib.rs  main.rs  outbound.rs  output.rs  processor.rs  routing.rs  transport.rs
simple_outbounds/: Cargo.toml
simple_outbounds/src/: freedom.rs  http.rs  lib.rs
sniffer/: Cargo.toml
sniffer/src/: http.rs  tls.rs
socks5/: Cargo.toml
socks5/src/: lib.rs  main.rs  server.rs
transport/: Cargo.toml
transport/src/: lib.rs  tcp.rs
transport/src/inbound/: mod.rs  tcp.rs
transport/src/outbound/: mod.rs  tcp.rs
transport/src/sniffer/: http.rs  mod.rs  tls.rs
vmess/: Cargo.toml
