[package]
name = "android"
version = "0.1.0"
authors = ["Comet <comet@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android_logger = "0.9.0"
jni = "0.17.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
log = "0.4.0"
pnet = "0.26.0"
nix = "0.18.0"
smallvec="1.4.2"
common = { path = "../common" }
transport = { path = "../transport" }
dns = { path = "../dns" }
net_wrapper = { path="../net_wrapper" }
flurry = "0.3.1"