[package]
name = "android_lib"
version = "0.1.0"
authors = ["Comet <comet@email.com>"]
edition = "2018"

[lib]
crate_type=["cdylib"]


[dependencies]
android_logger = "0.8.6"
jni = "0.14.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
log = "0.4.0"
pnet = "0.25.0"
nix = "0.17.0"
smallvec="1.2.0"
