[package]
name = "android_lib"
version = "0.1.0"
authors = ["Comet <comet@email.com>"]
edition = "2018"

[lib]
crate_type=["cdylib"]

[dependencies]
android_logger = "0.9.0"
jni = "0.17.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
log = "0.4.0"
pnet = "0.26.0"
nix = "0.19.0"
smallvec="1.4.2"
flurry = "0.3.1"

common = { path = "../common" }
