[package]
name = "comet-android"
version = "0.1.0"
authors = ["Comet <comet@email.com>"]
edition = "2018"

[lib]
crate_type=["cdylib"]

[dependencies]
comet = { path = "../comet" }
android_logger = "0.9"
jni = "0.18"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
futures = "0.3"
smol_str = { version = "0.1", features = ["serde"] }