[package]
name = "comet-bin"
version = "0.1.0"
authors = ["Comet <comet@email.com>"]
edition = "2018"

[dependencies]
comet = { path = "../comet" }
fern = { version = "0.6", features = ["colored"] }
clap = "3.0.0-beta.2"
chrono = "0.4"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
