[package]
name = "comet"
version = "0.1.0"
authors = ["Comet <comet@email.com>"]
edition = "2018"

[dependencies]
# Serde
serde_regex = "1.1"
serde_with = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"

# DNS
trust-dns-proto = "0.20"
trust-dns-resolver = { version = "0.20" }

# Protocol
httparse = "1.3"
# http = "0.2.1"
hyper = "0.14"
tungstenite = { version = "0.12", default-features = false }
tokio-tungstenite = "0.13"
warp = { version = "0.3", default-features = false, features = ["websocket"] }
rcgen = { version = "0.8", features = ["x509-parser"], optional = true }
tokio-rustls = { version = "0.22", optional = true }

# Async
tokio = { version = "1.1", features = ["full"] }
futures = "0.3"
futures-io = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"
tokio-prepend-io = "0.1.0"
tokio-util = { version = "0.6", features = ["compat"] }

# --
anyhow = "1.0"
log = "0.4"
bytes = "1"
net2 = "0.2"
ipnetwork = "0.17"
smol_str = { version = "0.1", features = ["serde"] }

once_cell = "1.5"
pin-project-lite = "0.2"
pin-project = "1"
flurry = "0.3.1"
base64 = "0.13.0"
rand_xorshift = "0.3.0"
lazy_static = "1.4.0"
lru-cache = "0.1.2"
socket2 = "0.3"
rand = "0.8"
url = { version = "2.2.0", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip"] }
regex = "1"
quick-protobuf = "0.8.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

crypto2 = "0.1.1"
shadowsocks-crypto = { version = "0.1.2", features = ["v1-stream"] }
enum-utils = "0.1"
itertools = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
nix = "0.19"
pnet = "0.27.2"

[features]
default = ["use-rustls"]
use-rustls = [
  "trust-dns-resolver/dns-over-tls",
  "trust-dns-resolver/dns-over-https-rustls",
  "trust-dns-resolver/dns-over-rustls",
  "reqwest/rustls-tls-webpki-roots",
  "tokio-rustls",
]
tls-mitm = ["tokio-rustls", "rcgen"]
use-native-tls = [
  "trust-dns-resolver/dns-over-tls",
  "trust-dns-resolver/dns-over-native-tls",
  "reqwest/native-tls",
]
