[package]
name = "common"
version = "0.1.0"
authors = ["htdocscat <comet@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallstr = "0.1.0"
async-trait = "0.1.22"
tokio = { version = "0.2", features = ["full"] }
derivative = "1.0.3"
bytes = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"