[package]
name = "common"
version = "0.1.0"
authors = ["htdocscat <comet@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.22"
tokio = { version = "0.3", features = ["full"] }
derivative = "2.1.1"
bytes = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
smol_str = { version = "0.1.17", features = ["serde"] }