[package]
name = "kokodayo-android"
version = "0.1.0"
authors = ["Comet <comet@email.com>"]
edition = "2018"

[lib]
crate_type=["cdylib"]

[dependencies]
kokodayo = { path = "../kokodayo" }
android_logger = "0.9.0"
jni = "0.18.0"
anyhow = "1.0"
tokio = { version = "0.3.1", features = ["full"] }
log = "0.4.0"
futures = "0.3"
smol_str = { version = "0.1.17", features = ["serde"] }