[package]
name = "kokodayo"
version = "0.1.0"
authors = ["Comet <comet@email.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
tokio = { version = "0.3.1", features = ["full"] }
log = "0.4.0"
futures = "0.3"
bytes = "0.6.0"
httparse = "1.3.4"
rand = "*"
trust-dns-proto = "0.19.3"
trust-dns-client = "0.19.3"
nix = "0.19.0"
libc = "0.2.42"
net2 = "0.2.35"
serde = { version = "1.0", features = ["derive"] }
ipnetwork = "0.17.0"
serde_yaml = "0.8"
smol_str = { version = "0.1.17", features = ["serde"] }
enum_dispatch = "0.3.3"
common = { path = "../common" }
async-trait = "0.1.22"
env_logger = "0.8"
once_cell = "1.4.1"

[dependencies.regex]
version = "1"
default-features = false
features = ["std", "perf-cache", "perf-dfa"]


