[package]
name = "kokodayo"
version = "0.1.0"
authors = ["Comet <comet@email.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
tokio = { version = "0.3.1", features = ["full"] }
log = "0.4.0"
futures = "0.3"
bytes = "0.6.0"
httparse = "1.3.4"
trust-dns-proto = "0.19.3"
nix = "0.19.0"
libc = "0.2.42"
net2 = "0.2.35"
serde = { version = "1.0", features = ["derive"] }
ipnetwork = "0.17.0"
serde_yaml = "0.8"
smol_str = { version = "0.1.17", features = ["serde"] }
enum_dispatch = "0.3.3"
async-trait = "0.1.22"
once_cell = "1.4.1"
pin-project-lite = "0.1.11"
serde_regex = "1.1.0"
serde_with = "1.5.1"
flurry = "0.3.1"
pnet = "0.26.0"
rand = "0.7.3"
base64 = "0.13.0"
xorshift = "0.1.3"

[dependencies.regex]
version = "1"
default-features = false
features = ["std", "perf-cache", "perf-dfa"]

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
openssl = { version = "0.10" }
