[package]
name = "net_wrapper"
version = "0.1.0"
authors = ["Comet <comet@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net2 = "0.2.35"
anyhow = "1.0"
log = "0.4.0"
nix = "0.18.0"
libc = "0.2.42"
tokio = { version = "0.2", features = ["full"] }