[package]
name = "processors"
version = "0.1.0"
authors = ["Comet <comet@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
log = "0.4.0"
futures = "0.3"
bytes = "0.5.3"
httparse = "1.3.4"
anyhow = "1.0"

common = { path = "../common" }
settings = { path = "../settings" }