[package]
name = "settings"
version = "0.1.0"
authors = ["htdocscat <comet@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ipnetwork = "0.17.0"
serde_json = "1.0"
common = { path = "../common" }
regex = "1"
log = "0.4.0"
toml = "0.5"
anyhow = "1.0"