[package]
name = "simple_outbounds"
version = "0.1.0"
authors = ["htdocscat <comet@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
transport = { path = "../transport" }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1.22"