[package]
name = "transport"
version = "0.1.0"
authors = ["htdocscat <comet@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
common = { path = "../common" }
settings = { path = "../settings" }
log = "0.4.0"
env_logger = "0.7.1"
async-std = "1.4.0"
futures = "0.3"
bytes = "0.5.3"
derivative = "1.0.3"
net2 = "0.2.33"
tokio-threadpool = "0.1.17"
anyhow = "1.0"
async-trait = "0.1.22"
net_wrapper = { path="../net_wrapper" }